tests/testfiles/validated/invalid_programs/601_notDeclared.c
int main (){
  int x; 
  y = 3; 
  return x; 
}